main.css
/* grid system*/
* {
    box-sizing: border-box;
}

.row {
  max-width: 1000px;
  padding-left: 20px;
  padding-right: 20px;
  margin: 0 auto;
}

.row::before, .row::after {
  display: table;
  content: '';
}

.row::after {
  clear: both;
}

.col-3, .col-4, .col-6,.col-5, .col-7,.col-12 {
  float: left;
  padding-left: 1.04166666%;
  padding-right: 1.04166666%;
}

.col-3, .col-4, .col-6,.col-5,.col-7, .col-12 {
  width: 100%;
}
/*media query*/
@media only screen and (min-width: 640px) {
  .col-3 {
    width: 25%;
  }

  .col-4 {
    width: 33.33%;
  }
  .col-5 {
    width: 41.66%;
  }

  .col-6 {
    width: 50%;
  }

  .col-7 {
    width: 58.33%;
  }

    .col-12 {
    width: 100%;
  }
}

/*index page styling starts here*/
body#background {
  font-family: 'Overpass', Sans-Serif;
  font-size: 16px;
  background-color: #FCE4EC;
}
.indexHeader {
  border-bottom: 1px solid #880E4F;
  font-family: 'Permanent Marker', Cursive;
  font-size: 21px;
  margin-bottom: 20px;
  text-align: center;
}

#name {
  font-family: 'Permanent Marker', Cursive;
  font-size: 16px;
}

#tag {
  color: #880E4F;
  text-align: center;
}
#tag span {
  font-weight: bold;
  color: #000;
}
#description {
 color: #880E4F;
 font-size: 18px;
 text-align: justify;
}

#login {
  margin: 0 auto;
  display:block;
  text-align: center justify;
  padding: 20px;
  border: 1px solid #000;
  border-radius: 10px;
  background: inherit;
}

#password {
  display: inline-block;
  width: 80%;
  max-width: 100%;
  position:relative;
  left: 40px;
  border-radius: 6px;
  border: 1px solid #000;
  margin-bottom: 20px;
  color: #880E4F;
  padding: 10px;
}

#submit {
  padding: 10px;
  width: 80%;
  max-width: 100%;
  display: inline-block;
  color: white;
  position: relative;
  left: 40px;
  border: 1px solid #000;
  background: #880E4F;
  border-radius: 6px;
  cursor: pointer;
}

/*app styling starts here*/
body#dashboard {
  font-family: 'Overpass', Sans-Serif;
  font-size: 16px;
  background-color: #FCE4EC;
}

#noteHeader {
  font-size: 21px;
  text-align: center;
  padding: 10px;
  margin: 10px;
}

#searchButton {
  display: inline-block;
  padding: 10px;
  background: #880E4F;
  border-radius: 50px 12px;
  cursor: pointer;
  color: white;
  font-family: 'Overpass', Sans-Serif;
  font-size: 16px;
}

 #addButton, .check, .delete, .buttons {
  margin: auto;
  margin-top: 10px;
  background: none;
  border: 0px;
  color: #880E4F;
  font-size: 16px;
  font-weight: bold;
  cursor: pointer;
}

#logOut {
  background: none;
  background-color: #F8BBD0;
  border-radius: 12px;
  margin-top: 10px;
  font-family: 'Permanent Marker', Cursive;
  font-size: 13px;
  cursor: pointer;
}

#toDoBox {
  border: 1px solid #880E4F;
  border-radius: 12px;
  padding: 20px;
  background-color: #F8BBD0;
  height: 300px;
  margin-bottom: 10px;
}

#toDoHeader {
  border-bottom: 1px dashed #880E4F;
  text-align: center;
}

#listBox {
  border: 1px solid #880E4F;
  border-radius: 12px;
  padding: 20px;
  background-color: #F8BBD0;
  height: 300px;
  margin-bottom: 10px;
}

#listHeader {
  border-bottom: 1px dashed #880E4F;
  text-align: center;
  margin: 0;
}

#entry, #listEntry {
  width: 60%;
  margin: 10px;
}

.task_checked {
  text-decoration: line-through;
}

.list, .any-list {
  list-style: none;
  margin-left: 0;
  padding-left: 0;
}

li {
  padding-left: 16px;
  text-indent: -16px;
  text-align: left;
}

li:before {
  content: "o";
  padding-right: 5px;
}

.hidden {
  display:none;
}

#results {
vertical-align: top;
margin: 25px auto;
border-radius: 12px;
overflow-x: auto;
font-family: 'OverPass', Sans-Serif;  
height: 500px;
background-color: #F8BBD0 ;
}

.result-entry {
  padding: 10px;
  margin: auto;
  text-align:left;
}


.result-card {
  background-color: white;
  border: solid 1px #880E4F;
  border-radius: 12px;
  margin: 5px;
}

.result-card #title {
  font-size: 18px;
}

.result-card #company {
  font-weight: bold;
}

#searchArea {
  display: inline-block;
}

#searchTerm, #searchLocation, #entry, #listEntry {
  padding: 10px;
  margin: 10px;
  border: 1px solid #880E4F;
  border-radius: 12px;
}

#searchForm{
  display: inline-block;
  margin-top: 20px;
  margin-bottom: 20px;
  margin-left: 0;
  margin-right: 0;
  text-align: center;
}

#calendar {
  margin-top: 20px;
  padding: 20px;
  border-radius: 12px;
  border: solid 1px #880E4F;
  background-color: #F8BBD0;
  z-index: 3;
}

#scheduler {
  
  font-family:'Overpass', Sans-Serif;
  font-size: 21px;
  text-align: center justify;
  padding: 10px;
  margin: 10px;
}

#createEvent {
  display:inline-block;
  padding: 20px 20px 20px 10px;
  text-align: center;
}
#timeSlot {
  display:inline-block;
  padding: 0 20px 0 10px;
}
#timeSlot label {
  display: inline-block;
}
#eventTime {
  display:inline-block;
}
#eventName {
  border: 1px solid #880E4F;
  border-radius: 6px ;
  background-color: white;
  font-size: 21px;
}
.modal {
  position: fixed;
  z-index: 4;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.4);
}
.modalContent {
  width: 480px;
  max-width: 100%;
  height: 120px;
  max-height: 100%;
  display:block;
  background-color: white;
  margin: auto;
  border: 1px solid #880E4F;
  border-radius: 12px;
  z-index: 4;
}
.modalContent h3 {
  text-align: center;
  margin: 0;
}
.hidden {
  display:none;
}
.close {
margin: 0;
padding: 0;
float: right;
font-weight: bold;
font-size: 25px;
cursor: pointer;
text-decoration: none;
}

